--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "lucide-react": "^0.561.0",
     "mapbox-gl": "^3.17.0",
     "next": "16.0.10",
+    "react-native-web": "^0.19.10",
+    "@zomato/design-tokens": "^1.0.0",
+    "@zomato/ui": "^1.0.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
