--- a/package.json
+++ b/package.json
@@ -16,37 +16,44 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-table": "^8.21.3",
     "@types/js-cookie": "^3.0.6",
     "@types/mapbox-gl": "^3.4.1",
+    "@zomato/api-client": "*",
+    "@zomato/design-tokens": "^1.0.0",
+    "@zomato/ui": "^1.0.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.561.0",
     "mapbox-gl": "^3.17.0",
     "next": "16.0.10",
-    "react-native-web": "^0.19.10",
-    "@zomato/design-tokens": "^1.0.0",
-    "@zomato/ui": "^1.0.0",
-    "@zomato/api-client": "*",
+    "next-themes": "^0.4.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "react-map-gl": "^8.1.0",
+    "react-native-web": "^0.19.10",
     "recharts": "^3.5.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.4.0",
