--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint",
     "test": "jest",
     "test:watch": "jest --watch",
+    "type-check": "tsc --noEmit",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
